--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ repository = "https://github.com/FlorianXXIV/modrinth-apitool"
 
 [dependencies]
 argparse = "0.2.2"
+colored = "2.2.0"
 reqwest = {version="0.12",features=["blocking","json"]}
 serde = {version="1.0.214",features=["derive"]}
 serde_json = "1.0.132"
