--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,5 @@ colored = "2.2.0"
 reqwest = {version="0.12",features=["blocking","json"]}
 serde = {version="1.0.214",features=["derive"]}
 serde_json = "1.0.132"
+text_io = "0.1.12"
 toml = "0.8.19"
