--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ repository = "https://github.com/FlorianXXIV/modrinth-apitool"
 argparse = "0.2.2"
 base16ct = {version="0.2.0", features=["alloc", "std"]}
 colored = "3"
+regex = "1.11.1"
 reqwest = {version="0.12",features=["blocking","json"]}
 serde = {version="1.0.214",features=["derive"]}
 serde_json = "1.0.132"
