--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ authors = ["FlorianXXIV"]
 description = "A command line interface for interacting with the modrinth api to manage you minecraft mods more easily."
 license = "AGPL-3.0"
 repository = "https://github.com/FlorianXXIV/modrinth-apitool"
+categories = ["command-line-utilities", "games"]
 
 [dependencies]
 argparse = "0.2.2"
