--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "modrinth-apitool"
-version = "0.3.0"
+name = "mapito"
+version = "0.3.1"
 edition = "2021"
 authors = ["FlorianXXIV"]
 description = "A command line interface for interacting with the modrinth api to manage you minecraft mods more easily."
