--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.3.2"
 edition = "2021"
 authors = ["FlorianXXIV"]
 description = "A command line interface for interacting with the modrinth api to manage you minecraft mods more easily."
-license = "AGPL-3.0"
+license = "EUPL-1.2"
 repository = "https://github.com/FlorianXXIV/modrinth-apitool"
 categories = ["command-line-utilities", "games"]
 
